<resources>
    <string name="app_name">カーメモる</string>
    <string name="InitialSet">初期設定</string>
    <string name="InitialSetNote">車の基本情報を登録する</string>
    <string name="Hint">次の画面から新規登録ができます。画面右下の「＋」をタップしてください。</string>
    <string name="MakerName">メーカー</string>
    <string name="CarName">車名</string>
    <string name="LicenceNumber">車のナンバー</string>
    <string name="edit_MakerName"></string>
    <string name="edit_CarName"></string>
    <string name="bt_SetRegist">登録する</string>
    <string name="bt_CarDataShow">クルマを選ぶ</string>
    <string name="toolbar_title">メンテナンス記録</string>

    <string name="data_title">マイカーメモ</string>
    <string name="date_show">""</string>
    <string name="date_title">日付</string>
    <string name="category_title">内容</string>
    <string name="price_title">料金</string>
    <string name="notes_title">メモ</string>
    <string name="bt_datePicker">選択する</string>
    <string name="bt_saveData">保存する</string>
    <string name="totalPrice_title">合計金額</string>

    <string name="menu_Item1">車種データ</string>
    <string name="menu_Item2">メンテナンス記録</string>
    <string name="menu_Item3">初期設定</string>
    <string name="menu_Item4">メンテナンス記録</string>
    <string name="menu_Item5">車種データ</string>
    <string name="menu_Item6">給油データのみ</string>
    <string name="menu_Item7">洗車データのみ</string>
    <string name="menu_Item8">定期交換データのみ</string>
    <string name="menu_Item9">故障・修理データのみ</string>
    <string name="menu_Item10">車検・点検データのみ</string>
    <string name="menu_Item11">全データの表示</string>

    <string name="update_data_title">マイカーメモ</string>
    <string name="bt_updateDate">更新する</string>

    <string name="ads_AppId">ca-app-pub-8672150310568733~8558217885</string>
    <string name="ads_UnitId_Banner">ca-app-pub-8672150310568733/1712294851</string>

</resources>
