<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialSetting">

    <TextView

        android:id="@+id/InitialSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InitialSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/InitialSetNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InitialSetNote"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/MakerName"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/MakerName"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/CarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CarName"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:id="@+id/CarImage"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:text="@string/CarImage"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:id="@+id/edit_MakerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_MakerName"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/edit_CarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_CarName"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/bt_SetRegist"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:text="@string/bt_SetRegist"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="414dp" />

    <Button
        android:id="@+id/bt_TakePic"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/bt_TakePic"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="245dp" />

</android.support.constraint.ConstraintLayout>